src/test/deca/codegen/invalid/intermediaire2/arithmetiques/04modParZero.deca
// Description:
//    Programme minimaliste testant le modulo par 0
//
// Resultats:
//    04modParZero.expected
//
// Historique:
//    cree le 09/06/2022

{
    int x = 5;
    x = x % 0;
}